--- a/src/main/resources/BaseAdmin.fxml
+++ b/src/main/resources/BaseAdmin.fxml
@@ -6,7 +6,7 @@
 
 
 <?import java.net.URL?>
-<BorderPane fx:id="rootBorderPane" fx:controller="controllers.AffichageController"
+<BorderPane fx:id="rootBorderPane" fx:controller="controllers.BaseAdminController"
             xmlns:fx="http://javafx.com/fxml"
             prefWidth="1000.0" prefHeight="600.0"
             styleClass="root">
@@ -27,7 +27,7 @@
                 <TextField promptText="recherche" prefWidth="200" />
                 <Region HBox.hgrow="ALWAYS"/>
                 <Button text="🔔" style="-fx-font-size: 16px;" />
-                <MenuButton text="zeineb zeineb">
+                <MenuButton fx:id="userMenuButton">
                     <items>
                         <MenuItem text="Profil"/>
                         <MenuItem text="Déconnexion"/>
