--- a/src/main/resources/Commande.fxml
+++ b/src/main/resources/Commande.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.StackPane?>
 
 <StackPane xmlns="http://javafx.com/javafx/20.0.2" xmlns:fx="http://javafx.com/fxml/1"
-           fx:controller="controllers.Commande"
+           fx:controller="controllers.CommandeController"
            style="-fx-background-color: #f5f5f5;">
 
     <VBox alignment="CENTER" spacing="20" maxWidth="400"
