--- a/src/main/resources/EventViews/EventEdit.fxml
+++ b/src/main/resources/EventViews/EventEdit.fxml
@@ -1,91 +1,76 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.geometry.Insets?>
 
-<BorderPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/17"
-            fx:controller="controllers.Events.EventFormController"
-            prefWidth="600" prefHeight="650"
+<BorderPane xmlns:fx="http://javafx.com/fxml/1"
+            xmlns="http://javafx.com/javafx/17"
+            fx:controller="controllers.Events.EventEditController" prefWidth="600" prefHeight="650"
             style="-fx-background-color: white;">
 
     <center>
         <VBox spacing="10" alignment="TOP_LEFT">
             <padding><Insets top="20" left="30" right="30" bottom="20"/></padding>
             <children>
+                <Label text="Modifier un événement" style="-fx-font-size: 18px; -fx-font-weight: bold;" />
 
-                <Label text="Ajouter / Modifier un événement" style="-fx-font-size: 18px; -fx-font-weight: bold;" />
-
-                <!-- Name -->
                 <VBox spacing="3">
                     <TextField fx:id="nameField" promptText="Nom de l'événement" />
                     <Label fx:id="nameErrorLabel" textFill="red" visible="false" />
                 </VBox>
 
-                <!-- Location -->
                 <VBox spacing="3">
                     <TextField fx:id="locationField" promptText="Lieu" />
                     <Label fx:id="locationErrorLabel" textFill="red" visible="false" />
                 </VBox>
 
-                <!-- Date -->
                 <VBox spacing="3">
                     <DatePicker fx:id="datePicker" />
                     <Label fx:id="dateErrorLabel" textFill="red" visible="false" />
                 </VBox>
 
-                <!-- Time -->
                 <VBox spacing="3">
-                    <TextField fx:id="timeField" promptText="Heure (hh:mm)" />
+                    <TextField fx:id="timeField" promptText="Heure (HH:mm)" />
                     <Label fx:id="timeErrorLabel" textFill="red" visible="false" />
                 </VBox>
 
-                <!-- End Time -->
                 <VBox spacing="3">
-                    <TextField fx:id="endTimeField" promptText="Heure de fin (hh:mm)" />
+                    <TextField fx:id="endTimeField" promptText="Heure de fin (HH:mm)" />
                     <Label fx:id="endTimeErrorLabel" textFill="red" visible="false" />
                 </VBox>
 
-                <!-- Description -->
                 <VBox spacing="3">
                     <TextField fx:id="descriptionField" promptText="Description" />
                     <Label fx:id="descriptionErrorLabel" textFill="red" visible="false" />
                 </VBox>
 
-                <!-- Image -->
                 <HBox spacing="10" alignment="CENTER_LEFT">
-                    <Button text="Choisir une image" onAction="#handleImageBrowse" />
+                    <Button text="Changer l'image" onAction="#handleImageBrowse" />
                     <Label fx:id="imageLabel" text="Aucune image choisie" />
                 </HBox>
-                <Label fx:id="imageErrorLabel" textFill="red" />
+                <Label fx:id="imageErrorLabel" textFill="red" visible="false" />
 
-
-                <!-- Capacity -->
                 <VBox spacing="3">
                     <TextField fx:id="capacityField" promptText="Capacité totale" />
                     <Label fx:id="capacityErrorLabel" textFill="red" visible="false" />
                 </VBox>
 
-                <!-- Remaining -->
                 <VBox spacing="3">
                     <TextField fx:id="remainingField" promptText="Places restantes" />
                     <Label fx:id="remainingErrorLabel" textFill="red" visible="false" />
                 </VBox>
 
-                <!-- Optional Fields -->
                 <TextField fx:id="linkField" promptText="Lien Google Meet" />
                 <TextField fx:id="coordinatesField" promptText="Coordonnées carte" />
 
-                <!-- Buttons -->
                 <HBox spacing="10" alignment="CENTER">
-                    <Button text="Enregistrer" onAction="#saveEvent"
-                            style="-fx-background-color: #28a745; -fx-text-fill: white;" />
-                    <Button text="Annuler" onAction="#cancelForm"
+                    <Button text="Modifier" onAction="#saveChanges"
+                            style="-fx-background-color: #007bff; -fx-text-fill: white;" />
+                    <Button text="Annuler" onAction="#cancelEdit"
                             style="-fx-background-color: #dc3545; -fx-text-fill: white;" />
                 </HBox>
-
             </children>
         </VBox>
     </center>
-
 </BorderPane>
