--- a/src/main/resources/formAjoutArticle.fxml
+++ b/src/main/resources/formAjoutArticle.fxml
@@ -8,13 +8,11 @@
 
 <BorderPane xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.formAjoutArticle">
 
-
-
     <!-- BODY + FOOTER (scrollable) -->
     <center>
         <ScrollPane fitToWidth="true" pannable="true" style="-fx-background-color: transparent;">
             <content>
-                <VBox spacing="30" style="-fx-padding: 20; -fx-background-color: white;">
+                <VBox spacing="30" style="-fx-padding: 20; -fx-background-color: white;" prefWidth="1000">
 
                     <!-- BANNIÈRE -->
                     <StackPane prefHeight="400">
@@ -30,27 +28,48 @@
 
                     <!-- FORMULAIRE + IMAGE -->
                     <HBox alignment="TOP_CENTER" spacing="30" style="-fx-padding: 20;">
-                        <VBox alignment="TOP_LEFT" prefWidth="600" spacing="15">
+                        <!-- FORM -->
+                        <VBox alignment="TOP_CENTER" spacing="15" prefWidth="750" maxWidth="750">
                             <Label style="-fx-text-fill: green; -fx-font-size: 18px; -fx-font-weight: bold;" text="Veuillez remplir les détails de votre article convenablement" />
                             <Label style="-fx-text-fill: #093f2e; -fx-font-size: 36px; -fx-font-weight: bold;" text="Proposez un article" />
 
-                            <TextField fx:id="nomArticleField" promptText="Nom de l'article" />
-                            <TextField fx:id="imageArticleField" promptText="Nom de l'image (temporaire)" />
+                            <TextField fx:id="nomArticleField" promptText="Nom de l'article" prefWidth="750" />
+                            <TextField fx:id="imageArticleField" promptText="Nom de l'image (temporaire)" prefWidth="750" />
+                            <ComboBox fx:id="categorieComboBox" promptText="Catégorie" prefWidth="750" />
+                            <TextField fx:id="localisationField" promptText="Localisation" prefWidth="750" />
 
-                            <ComboBox fx:id="categorieComboBox" promptText="Catégorie" />
-
-                            <TextField fx:id="localisationField" promptText="Localisation" />
                             <HBox spacing="10">
                                 <TextField fx:id="quantiteField" promptText="Quantité de l'article en Kg" HBox.hgrow="ALWAYS" />
                                 <TextField fx:id="prixField" promptText="Prix unitaire en dinar" HBox.hgrow="ALWAYS" />
                             </HBox>
-                            <TextArea fx:id="descriptionArticleArea" prefRowCount="4" promptText="Description" />
-                            <HBox spacing="10">
-                                <Button fx:id="confirmerArticleButton" style="-fx-background-color: green; -fx-text-fill: white;" text="Confirmer" />
-                                <Button fx:id="annulerArticleButton" style="-fx-background-color: #3a3b4a; -fx-text-fill: white;" text="Annuler" />
+
+                            <!-- Zone de description bien dimensionnée -->
+                            <TextArea fx:id="descriptionArticleArea"
+                                      promptText="Description"
+                                      prefRowCount="6"
+                                      prefHeight="150"
+                                      prefWidth="750"
+                                      maxWidth="750"
+                                      wrapText="true"
+                                      VBox.vgrow="NEVER"
+                                      style="-fx-font-size: 14px;" />
+
+                            <!-- Boutons -->
+                            <HBox spacing="15">
+                                <Button fx:id="confirmerArticleButton"
+                                        text="Confirmer"
+                                        style="-fx-background-color: green; -fx-text-fill: white; -fx-font-size: 14px;"
+                                        prefWidth="140"
+                                        prefHeight="45" />
+                                <Button fx:id="annulerArticleButton"
+                                        text="Annuler"
+                                        style="-fx-background-color: #3a3b4a; -fx-text-fill: white; -fx-font-size: 14px;"
+                                        prefWidth="140"
+                                        prefHeight="45" />
                             </HBox>
                         </VBox>
 
+                        <!-- IMAGE À DROITE -->
                         <ImageView fitHeight="450" preserveRatio="true">
                             <Image url="@kk.jpg" />
                         </ImageView>
