--- a/src/main/resources/ajoutCategorieArticle.fxml
+++ b/src/main/resources/ajoutCategorieArticle.fxml
@@ -24,7 +24,12 @@
 
                 <TextField fx:id="nomCategorieField" promptText="Nom de la catégorie"/>
                 <TextArea fx:id="descriptionCategorieField" prefRowCount="4" wrapText="true" promptText="Description"/>
-                <TextField fx:id="nomImagecatField" promptText="Nom de l'image (temporaire)"/>
+                <HBox spacing="10" alignment="CENTER_LEFT">
+                    <Button text="Choisir une image"
+                            onAction="#choisirImageCategorie"/>
+                    <Label fx:id="nomImagecatField" text="Aucune image sélectionnée"
+                           style="-fx-text-fill: #666666;" />
+                </HBox>
                 <TextField fx:id="idCategorieField" visible="false"/>
 
                 <HBox alignment="CENTER" spacing="10">
