--- a/src/main/resources/workshop/AjouterCours.fxml
+++ b/src/main/resources/workshop/AjouterCours.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane prefHeight="600.0" prefWidth="1000.0" style="-fx-background-color: #edf7ef;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.workshop.AjouterCours">
+<BorderPane prefHeight="600.0" prefWidth="1000.0" style="-fx-background-color: #edf7ef;" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.workshop.AjouterCours">
 
     <top>
         <HBox alignment="CENTER_LEFT" spacing="20" style="-fx-background-color: white;">
